--- a/Inventory Manager/packages.config
+++ b/Inventory Manager/packages.config
@@ -3,10 +3,13 @@
   <package id="BouncyCastle.Cryptography" version="2.4.0" targetFramework="net48" />
   <package id="ClosedXML" version="0.104.2" targetFramework="net48" />
   <package id="ClosedXML.Parser" version="1.3.0" targetFramework="net48" />
+  <package id="Costura.Fody" version="6.0.0" targetFramework="net48" developmentDependency="true" />
   <package id="DocumentFormat.OpenXml" version="3.2.0" targetFramework="net48" />
   <package id="DocumentFormat.OpenXml.Framework" version="3.2.0" targetFramework="net48" />
   <package id="EntityFramework" version="6.5.1" targetFramework="net48" />
   <package id="ExcelNumberFormat" version="1.1.0" targetFramework="net48" />
+  <package id="Fody" version="6.9.1" targetFramework="net48" developmentDependency="true" />
+  <package id="ILRepack" version="2.0.36" targetFramework="net48" developmentDependency="true" />
   <package id="Microsoft.Bcl.HashCode" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.NETCore.Platforms" version="7.0.4" targetFramework="net48" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net48" />
