--- a/Inventory Manager/packages.config
+++ b/Inventory Manager/packages.config
@@ -10,9 +10,6 @@
   <package id="Fody" version="6.9.1" targetFramework="net48" developmentDependency="true" />
   <package id="Guna.UI2.WinForms" version="2.0.4.6" targetFramework="net48" />
   <package id="ILRepack" version="2.0.36" targetFramework="net48" developmentDependency="true" />
-  <package id="itext" version="9.1.0" targetFramework="net48" />
-  <package id="itext.commons" version="9.1.0" targetFramework="net48" />
-  <package id="iTextSharp" version="5.5.13.4" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.3" targetFramework="net48" />
   <package id="Microsoft.Bcl.HashCode" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection" version="9.0.3" targetFramework="net48" />
@@ -22,6 +19,7 @@
   <package id="Microsoft.Extensions.Options" version="9.0.3" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="9.0.3" targetFramework="net48" />
   <package id="Microsoft.NETCore.Platforms" version="7.0.4" targetFramework="net48" />
+  <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1004" targetFramework="net48" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
